# cdp

./: README.md  cabal.project  hie.yaml  lnandakumar-cdp-final.cabal
doc/: game.md  pcode.md
src/: AdaGuess.hs  EvenOdd.hs  FiftyFifty.hs  README.md  TestEvenOdd.hs  TestFiftyFifty.hs  code.md
